[package]
edition = "2024"
name    = "archer"
version = "1.3.3"

[[bin]]
name = "archer"
test = false
bench = false

[dependencies]
embassy-executor = { version = "0.9", features = [] }
embassy-time = { version = "0.5", features = ["generic-queue-8"] }
esp-alloc = { version = "0.9" }
esp-backtrace = { version = "0.18", features = [
  "esp32",
  "panic-handler",
  "println",
] }
esp-hal = { version = "1.0", features = ["esp32", "unstable"] }
esp-rtos = { version = "0.2", features = [
  "embassy",
  "esp-alloc",
  "esp32",
] }
esp-println = { version = "0.16", features = ["esp32", "log-04"] }
pololu_tic = "0.1"
log = "0.4"
embedded-hal-bus = "0.3"
embedded-hal = "1.0"
mma8x5x = { git = "https://github.com/eldruin/mma8x5x-rs.git" }
libm = "0.2"
thiserror = { version = "2.0", default-features = false }
embedded-io = "0.7.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
